Re: #1789 Newsletter layout fix - extra left padding removed on small screens

--- a/source/sass/search/_search-site.scss
+++ b/source/sass/search/_search-site.scss
@@ -692,7 +692,9 @@
   }
 
   .custom-newsletter-outer{
-    padding-left: 2.6rem;
+    @media all and (min-width: $bp-med) {
+      padding-left: 2.6rem;
+    }
   }
 
   .custom-newsletter{
